# v3

./: .editorconfig  README.md  docker-compose.yaml  mock_sensors.py
.config/grafana/: grafana.ini
.config/influxdb/: influx-configs
.config/nanomq/: nanomq.conf  nanomq_pwd.conf
.config/telegraf/: telegraf.conf
.github/workflows/: deploy.yaml
backend/: .dockerignore  .gitignore  README.md  dockerfile  entrypoint.sh  example.env  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02d86065348b_add_disabled_field_for_user.py  046bc92a9255_billing_harringhton_relations.py  1f9452717af6_add_billing_harringhton.py  246bc52f8dfd_billing_harringhton_relations.py  327528894dc8_initial.py  6005fb43f370_billing_harringhton_relations.py  6647ad905212_initial.py  7a3393df4542_initial.py  bc8a4d89646f_add_fucking_pk.py  d888e1d1740f_initial.py
backend/backend/: auth.py  conf.py  db.py  main.py  model.py
backend/backend/example/: router.py
backend/src/: main.py
backend/src/api/: __init__.py  routers.py
backend/src/api/endpoints/: example.py  log.py
backend/src/api/endpoints/auth/: __init__.py  core.py  routes.py
backend/src/api/endpoints/bill/: __init__.py  core.py  routes.py
backend/src/api/endpoints/flats/: __init__.py  core.py  routes.py  temperature.py
backend/src/api/endpoints/mqtt/: __init__.py  client.py  core.py  routes.py
backend/src/auth/: core.py  routers.py  routes.py
backend/src/controllers/: crud_base.py
backend/src/core/: config.py  db.py
backend/src/models/: __init__.py  bill.py  temp_schedule.py  user.py
backend/src/mqtt/: __init__.py  example.py
backend/src/schemas/: __init__.py  auth.py  bill.py  influx.py  log_entry.py  login.py  schedule.py  user.py
frontend/: .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
(+79 files in other folders)
