[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nerlih Max <nerlihmax@yandex-team.ru>", "TJesT <alexeynospid@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
fastapi-keycloak = "^1.0.11"
python-keycloak = "^3.9.1"
colorlog = "^6.8.2"
pydantic-settings = "^2.2.1"
aenum = "^3.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
