[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nerlih Max <nerlihmax@yandex-team.ru>", "TJesT <alexeynospid@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
colorlog = "^6.8.2"
pydantic-settings = "^2.2.1"
aenum = "^3.1.15"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
gmqtt = "^0.6.14"
alembic = "^1.13.1"
fastapi-mqtt = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
